--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "axios": "^1.7.7",
     "convex": "^1.16.0",
     "node-fetch": "^2.7.0",
+    "openai": "^4.61.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
